--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/test.js"></script>
+  <script src="src/js/test.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TestSpec.js"></script>
