Add Task model and tests

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,10 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/js/test.js"></script>
+  <script src="src/js/Task.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/TestSpec.js"></script>
+  <script src="spec/TaskSpec.js"></script>
 
 </head>
 
