Add TaskRepository with save method and tests

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,13 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/js/Helpers.js"></script>
   <script src="src/js/Task.js"></script>
+  <script src="src/js/TaskRepository.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TaskSpec.js"></script>
+  <script src="spec/TaskRepositorySpec.js"></script>
 
 </head>
 
