Add TaskService and method for addTask

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,10 +15,12 @@
   <script src="src/js/Helpers.js"></script>
   <script src="src/js/Task.js"></script>
   <script src="src/js/TaskRepository.js"></script>
+  <script src="src/js/TaskService.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/TaskSpec.js"></script>
   <script src="spec/TaskRepositorySpec.js"></script>
+  <script src="spec/TaskServiceSpec.js"></script>
 
 </head>
 
