Add editTask to TaskService and fetch to TaskRepository

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,7 @@
 
   <!-- include source files here... -->
   <script src="src/js/Helpers.js"></script>
+  <script src="spec/mocks.js"></script>
   <script src="src/js/Task.js"></script>
   <script src="src/js/TaskRepository.js"></script>
   <script src="src/js/TaskService.js"></script>
