--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-3.1.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/js/Helpers.js"></script>
+  <script src="src/js/helpers.js"></script>
   <script src="spec/mocks.js"></script>
   <script src="src/js/Task.js"></script>
   <script src="src/js/TaskRepository.js"></script>
